# cmake_vcpkg_solidity

./: CMakeLists.txt  README.md  vcpkg.json
src/: main.cpp
